# Geneblocks

./: .buildinfo  .gitignore  .travis.yml  LICENCE.txt  MANIFEST.in  README.html  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pypi-readme.rst  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: build.yml  document.yml  publish.yml
_modules/: index.html
_modules/geneblocks/: biotools.html  sequence_modification_utils.html  utils.html
_sources/: README.md.txt  index.rst.txt
_sources/ref/: CommonBlocks.rst.txt  sequence_modification_utils.rst.txt
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/ref/: CommonBlocks.rst  DiffBlocks.rst  biotools.rst  sequence_modification_utils.rst  utils.rst
examples/: basic_example.py  common_blocks.py  complex_sequences.py  diff_blocks.py  features_transfer.py
examples/sequences/: sequence1.gb  sequence2.gb
geneblocks/: CommonBlocks.py  DiffBlocks.py  Location.py  README.md  __init__.py  biotools.py  geneblocks.py  sequence_modification_utils.py  utils.py
geneblocks/CommonBlocks/: CommonBlocks.py  CommonBlocksRecordTranslator.py  __init__.py  commonblocks_tools.py
geneblocks/DiffBlocks/: DiffBlock.py  DiffBlocks.py  DiffRecordTranslator.py  __init__.py  diffblocks_tools.py
ref/: CommonBlocks.html  DiffBlocks.html  biotools.html  sequence_modification_utils.html  utils.html
tests/: test_base_diff_cases.py  test_basics.py  test_complex_sequences.py  test_scenarios.py  test_utils.py
tests/sequences/: long_equivalents.fa  sequence1.gb
(+6 files in other folders)
